/* $Id: changelog,v 1.1535 2001-06-22 19:40:55 sandervl Exp $ */

 2001-06-22: Dietrich Teickner <Dietrich_Teickner@t-online.de>
    - COMCTL32: o Check for invalid lpItem in LISTVIEW_GetItemA

 2001-06-22: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o Don't fill background of system icon if no system icon
                  is present (could be seen in os/2 look mode)
                o Reserved one window ulong (QWL_USER) for Odin apps (like Opera)
    - KERNEL32: o Semaphore updates (still not activated)

 2001-06-21: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: o Semaphore updates (still not activated)

 2001-06-21: knut st. osmundsen <knut.stange.osmundsen@mynd.no>
    - DDRAW:    o io_init1, io_init2 and io_exit1 forgot to save/restore EBX.
                  (Broke some apps when XF86Sup.sys is installed)

 2001-06-20: Sander van Leeuwen <sandervl@xs4all.nl>
    - include\win\winioctl.h:
                o Added CDROM ioctls
    - KERNEL32: o Dummy CDROM ioctl support

 2001-06-19: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: o Started with event, mutex & semaphore rewrite
                  (code not activated)

 2001-06-18: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o Added export entry for GetScrollBarInfo
                o Set ordinals for some exports
                o Correct size of SBS_SIZEBOX and SBS_SIZEGRIP scrollbars
                  during creation. (if too high or wide)
                  (CPOV bottom scrollbar now appears)
    - COMCTL32: o Wrong check in 6/17 comctl32 change

 2001-06-17: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: o Implemented IOCTL_SCSI_PASS_THROUGH_DIRECT storage ioctl
    - USER32:   o Fix for scrollbars with SBS_SIZEBOX or SBS_SIZEGRIP style
                  (use size specified in CreateWindow only if SBS_SIZEBOXTOPLEFTALIGN
                   nor SBS_SIZEBOXBOTTOMRIGHTALIGN style flags set)
                  (CPOV window now has the right size)